--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
+
+
+
 
 @tailwind base;
 @tailwind components;
@@ -7,4 +11,9 @@
 
 :root {
   font-family: "Inter", sans-serif;
+}
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900; 
 }
